--- a/DIAS-BlockedPage/BlockedPage.html
+++ b/DIAS-BlockedPage/BlockedPage.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Blocked - DIAS</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="blockedPage.css" />
 </head>
 <body>
   <header class="top-bar">
     <div class="logo">DIAS</div>
-    <div class="about">
-      <button>About</button>
+    <div class="user">
+      <button><i class="fa-regular fa-user"></i></button>
     </div>
   </header>
 
