Faculty page updated

--- a/DIAS-FacultyHomePage/homepage.html
+++ b/DIAS-FacultyHomePage/homepage.html
@@ -27,7 +27,7 @@
   <header class="top-bar">
     <div class="logo">DIAS</div>
     <div class="user-profile">
-      <button><i class="fa-regular fa-user"></i></button>
+      <button type="button" class="about-btn">About</button>
     </div>
   </header>
 
