--- a/DIAS-StudentAttendance/studentAttendance.html
+++ b/DIAS-StudentAttendance/studentAttendance.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,102 +8,110 @@
   <link rel="stylesheet" href="studentAttendance.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
+
 <body>
   <!-- Header -->
   <header class="top-bar">
     <div class="logo">DIAS</div>
     <div class="user-profile">
-      <button><i class="fa-regular fa-user"></i></button>
+      <button type="button" class="about-btn">About</button>
     </div>
   </header>
 
   <!-- Main Content -->
   <main class="attendance-container">
-    <h2>Mark Attendance</h2>
+    <h2 style="color: whitesmoke;">Mark Attendance</h2>
+
     <div class="card-row">
+
       <div class="student-card">
-        <p>Enrollment No: 1001</p>
-        <input type="checkbox" name="student_1001" />
+        <div class="student-info">
+          <p>EN22CS301061</p>
+          <input type="checkbox" name="student_1001" />
+        </div>
       </div>
       <div class="student-card">
-        <p>Enrollment No: 1002</p>
-        <input type="checkbox" name="student_1002" />
+        <div class="student-info">
+          <p>EN22CS301061</p>
+          <input type="checkbox" name="student_1001" />
+        </div>
       </div>
+
       <div class="student-card">
-        <p>Enrollment No: 1003</p>
-        <input type="checkbox" name="student_1003" />
+        <div class="student-info">
+          <p>EN22CS301061</p>
+          <input type="checkbox" name="student_1001" />
+        </div>
       </div>
+
       <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
+        <div class="student-info">
+          <p>EN22CS301061</p>
+          <input type="checkbox" name="student_1001" />
+        </div>
       </div>
+
       <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
+        <div class="student-info">
+          <p>EN22CS301061</p>
+          <input type="checkbox" name="student_1001" />
+        </div>
       </div>
+
       <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
+        <div class="student-info">
+          <p>EN22CS301061</p>
+          <input type="checkbox" name="student_1001" />
+        </div>
       </div>
+
       <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
+        <div class="student-info">
+          <p>EN22CS301061</p>
+          <input type="checkbox" name="student_1001" />
+        </div>
       </div>
+
       <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
+        <div class="student-info">
+          <p>EN22CS301061</p>
+          <input type="checkbox" name="student_1001" />
+        </div>
       </div>
+
       <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
+        <div class="student-info">
+          <p>EN22CS301061</p>
+          <input type="checkbox" name="student_1001" />
+        </div>
       </div>
+
       <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
+        <div class="student-info">
+          <p>EN22CS301061</p>
+          <input type="checkbox" name="student_1001" />
+        </div>
       </div>
+
       <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
+        <div class="student-info">
+          <p>EN22CS301061</p>
+          <input type="checkbox" name="student_1001" />
+        </div>
       </div>
+
       <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
+        <div class="student-info">
+          <p>EN22CS301061</p>
+          <input type="checkbox" name="student_1001" />
+        </div>
       </div>
-      <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
-      </div>
-      <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
-      </div>
-      <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
-      </div>
-      <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
-      </div>
-      <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
-      </div>
-      <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
-      </div>
-      <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
-      </div>
-      <div class="student-card">
-        <p>Enrollment No: 1004</p>
-        <input type="checkbox" name="student_1004" />
-      </div>
-      
+
+
+
 
     </div>
   </main>
 </body>
+
 </html>
