--- a/DIAS-LandingPage/LandingPage.html
+++ b/DIAS-LandingPage/LandingPage.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DIAS Login</title>
   <link rel="stylesheet" href="landingPage.css" />
 </head>
+
 <body>
   <header class="top-bar">
     <div class="right">
-        <h1 class="logo">DIAS</h1>
+      <h1 class="logo">DIAS</h1>
     </div>
     <div class="left">
+      <a href="about.html">
         <button type="button" class="about-btn">About</button>
+      </a>
+
     </div>
   </header>
 
@@ -27,4 +32,5 @@
     </div>
   </main>
 </body>
+
 </html>
